<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="sai.com.myappportfolio.MainActivity">

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:id="@+id/Popular_Movies"
        android:text="@string/Popular_Movies"
        android:layout_marginBottom="10dp"
        android:background="@color/colorButtonBackground"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorButtonBackground"
        android:gravity="center"
        android:id="@+id/Stock_Hawk"
        android:layout_marginBottom="10dp"
        android:text="@string/Stock_Hawk" />

    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:id="@+id/Build_it_Bigger"
        android:background="@color/colorButtonBackground"
        android:layout_marginBottom="10dp"
        android:text="@string/Build_it_Bigger" />
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/MYAM"
        android:background="@color/colorButtonBackground"
        android:id="@+id/MYAM"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/Go_Ubiquitous"
        android:background="@color/colorButtonBackground"
        android:id="@+id/Go_Ubiquitous"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/colorButtonBackground"
        android:text="@string/Capstone"
        android:id="@+id/Capstone"
        android:gravity="center"/>
</LinearLayout>
